@@ -1,0 +1,7 @@
+{
+  "parent": "item/generated",
+  "textures": {
+    "layer0": "silentgear:items/blueprint",
+    "layer1": "silentgear:items/blueprint_rod"
+  }
+}
