@@ -1,0 +1,20 @@
+{
+  "result": {
+    "item": "silentgear:blueprint_rod",
+    "count": 1
+  },
+  "pattern": [
+    "pr",
+    "pr"
+  ],
+  "type": "forge:ore_shaped",
+  "key": {
+    "p": {
+      "item": "silentgear:blueprint_paper"
+    },
+    "r": {
+      "ore": "stickWood",
+      "type": "forge:ore_dict"
+    }
+  }
+}
