@@ -1,0 +1,21 @@
+{
+  "result": {
+    "item": "silentgear:template_rod",
+    "count": 2
+  },
+  "pattern": [
+    "wr",
+    "wr"
+  ],
+  "type": "forge:ore_shaped",
+  "key": {
+    "w": {
+      "ore": "slabWood",
+      "type": "forge:ore_dict"
+    },
+    "r": {
+      "ore": "stickWood",
+      "type": "forge:ore_dict"
+    }
+  }
+}
